# anglist

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
SagittalMeasureAssist/: CMakeLists.txt  SagittalMeasureAssist.py  angles.py  assist_controller.py  logic_export.py  logic_inference.py  ui_export.py
SagittalMeasureAssist/lib/: assist_controller.py  logic_angles.py  logic_inference.py  ui_auto.py  ui_measure.py
SagittalMeasureTrain/: CMakeLists.txt  SagittalMeasureTrain.py
tests/: test_dataset_padding.py  test_logic_angles.py  test_model_shape.py
train/: __init__.py  dataset.py  export_onnx.py  infer_onnx.py  model.py  train.py
